src/objects/Community_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>kb_Community_Article_kav</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>KB_Public_Community_Article_kav</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Template for community advice articles</description>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_4__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Contributor__c</fullName>
        <label>Contributor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IKM_ID__c</fullName>
        <label>IKM ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Work Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Work Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete Article</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Article</label>
    <pluralLabel>Community Articles</pluralLabel>
</CustomObject>